--- a/nbs/NDWI.ipynb
+++ b/nbs/NDWI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,12 @@
     "        #calculate water percentage in label image\n",
     "        label_water_perc = self._water_perc_label_img_(path = match_label_tile_path)\n",
     "\n",
+    "        collector[CONST.WATER_DF_TILE_ID_STR].append(path_id)\n",
+    "        collector[CONST.WATER_DF_WATER_PERC_STR].append(perc_water)\n",
+    "        collector[CONST.WATER_DF_WATER_PERC_LABEL_STR].append(label_water_perc)\n",
+    "        collector[CONST.WATER_DF_PATH_STR].append(s2_path)\n",
     "\n",
+    "    self.water_df = pd.DataFrame(collector)\n",
     "\n",
     "  def _ndwi_s2_(self ,\n",
     "                     path):\n",
@@ -176,7 +181,7 @@
     "      \n",
     "      with rasterio.open(path) as src:\n",
     "          #read the image as numpy array\n",
-    "          arr = src.read()\n",
+    "          arr = src.read(1)\n",
     "          # printpercentage of pixels with water flag (value=1)\n",
     "          perc_water = round(( np.count_nonzero(arr == CONST.WATER_VALUE) / (arr.shape[0]*arr.shape[1]))*100,2)\n",
     "\n",
@@ -187,34 +192,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_18388\\2130820773.py:31: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_9184\\1036448553.py:50: RuntimeWarning: invalid value encountered in divide\n",
       "  ndwi = (green - nir) / (green + nir)\n"
      ]
     },
     {
      "ename": "AttributeError",
-     "evalue": "'ndwi' object has no attribute '_water_prob_new_imgs_'",
+     "evalue": "'ndwi' object has no attribute 'collector'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m instance \u001b[38;5;241m=\u001b[39m \u001b[43mndwi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_to_s2_tiles\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgit\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mflood_exercise\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mS2\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m                \u001b[49m\u001b[43mpath_to_labeled_tiles\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgit\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mflood_exercise\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mS2_HANDLABELED\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m instance\u001b[38;5;241m.\u001b[39mthreshold\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# instance.water_perc.to_csv(r'D:\\git\\flood_exercise\\RESULTS\\water_perc_Bolivia.csv')\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[4], line 21\u001b[0m, in \u001b[0;36mndwi.__init__\u001b[1;34m(self, path_to_s2_tiles, path_to_labeled_tiles)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mthreshold \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_ndwi_threshold_()\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m#calculate ndwi and mask with new threshold\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtest\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_water_prob_new_imgs_\u001b[49m()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ndwi' object has no attribute '_water_prob_new_imgs_'"
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m instance \u001b[38;5;241m=\u001b[39m \u001b[43mndwi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_to_s2_tiles\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgit\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mflood_exercise\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mS2\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m                \u001b[49m\u001b[43mpath_to_labeled_tiles\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgit\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mflood_exercise\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mS2_HANDLABELED\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m instance\u001b[38;5;241m.\u001b[39mcollector\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# instance.water_perc.to_csv(r'D:\\git\\flood_exercise\\RESULTS\\water_perc_Bolivia.csv')\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[13], line 41\u001b[0m, in \u001b[0;36mndwi.__init__\u001b[1;34m(self, path_to_s2_tiles, path_to_labeled_tiles)\u001b[0m\n\u001b[0;32m     38\u001b[0m     collector[CONST\u001b[38;5;241m.\u001b[39mWATER_DF_WATER_PERC_LABEL_STR]\u001b[38;5;241m.\u001b[39mappend(label_water_perc)\n\u001b[0;32m     39\u001b[0m     collector[CONST\u001b[38;5;241m.\u001b[39mWATER_DF_PATH_STR]\u001b[38;5;241m.\u001b[39mappend(s2_path)\n\u001b[1;32m---> 41\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwater_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollector\u001b[49m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ndwi' object has no attribute 'collector'"
      ]
     }
    ],
    "source": [
     "instance = ndwi(path_to_s2_tiles = r\"D:\\git\\flood_exercise\\S2\",\n",
     "                path_to_labeled_tiles= r\"D:\\git\\flood_exercise\\S2_HANDLABELED\")\n",
-    "instance.threshold\n",
+    "instance.df_water\n",
     "# instance.water_perc.to_csv(r'D:\\git\\flood_exercise\\RESULTS\\water_perc_Bolivia.csv')"
    ]
   },
